--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>About Us</h1>
-    <p>Learn more about us from here.</p>
+    <p>Learn more about us from here. This is my first time pulishing a website in github. wish me luck.</p>
     <a href="index.html">back to Home page.</a>
 </body>
 </html>
